# backend/internal/data/ent/entity.go
@@ -34,6 +34,10 @@ type Entity struct {
 	Notes string `json:"notes,omitempty"`
 	// Quantity holds the value of the "quantity" field.
 	Quantity float64 `json:"quantity,omitempty"`
+	// LowStockThreshold holds the value of the "low_stock_threshold" field.
+	LowStockThreshold *float64 `json:"low_stock_threshold,omitempty"`
+	// LowStockNotified holds the value of the "low_stock_notified" field.
+	LowStockNotified bool `json:"low_stock_notified,omitempty"`
 	// Insured holds the value of the "insured" field.
 	Insured bool `json:"insured,omitempty"`
 	// Archived holds the value of the "archived" field.
@@ -183,9 +187,9 @@ func (*Entity) scanValues(columns []string) ([]any, error) {
 	values := make([]any, len(columns))
 	for i := range columns {
 		switch columns[i] {
-		case entity.FieldInsured, entity.FieldArchived, entity.FieldSyncChildEntityLocations, entity.FieldLifetimeWarranty:
+		case entity.FieldLowStockNotified, entity.FieldInsured, entity.FieldArchived, entity.FieldSyncChildEntityLocations, entity.FieldLifetimeWarranty:
 			values[i] = new(sql.NullBool)
-		case entity.FieldQuantity, entity.FieldPurchasePrice, entity.FieldSoldPrice:
+		case entity.FieldQuantity, entity.FieldLowStockThreshold, entity.FieldPurchasePrice, entity.FieldSoldPrice:
 			values[i] = new(sql.NullFloat64)
 		case entity.FieldAssetID:
 			values[i] = new(sql.NullInt64)
@@ -263,6 +267,19 @@ func (_m *Entity) assignValues(columns []string, values []any) error {
 				return fmt.Errorf("unexpected type %T for field quantity", values[i])
 			} else if value.Valid {
 				_m.Quantity = value.Float64
+			}
+		case entity.FieldLowStockThreshold:
+			if value, ok := values[i].(*sql.NullFloat64); !ok {
+				return fmt.Errorf("unexpected type %T for field low_stock_threshold", values[i])
+			} else if value.Valid {
+				_m.LowStockThreshold = new(float64)
+				*_m.LowStockThreshold = value.Float64
+			}
+		case entity.FieldLowStockNotified:
+			if value, ok := values[i].(*sql.NullBool); !ok {
+				return fmt.Errorf("unexpected type %T for field low_stock_notified", values[i])
+			} else if value.Valid {
+				_m.LowStockNotified = value.Bool
 			}
 		case entity.FieldInsured:
 			if value, ok := values[i].(*sql.NullBool); !ok {
@@ -483,6 +500,14 @@ func (_m *Entity) String() string {
 	builder.WriteString(", ")
 	builder.WriteString("quantity=")
 	builder.WriteString(fmt.Sprintf("%v", _m.Quantity))
+	builder.WriteString(", ")
+	if v := _m.LowStockThreshold; v != nil {
+		builder.WriteString("low_stock_threshold=")
+		builder.WriteString(fmt.Sprintf("%v", *v))
+	}
+	builder.WriteString(", ")
+	builder.WriteString("low_stock_notified=")
+	builder.WriteString(fmt.Sprintf("%v", _m.LowStockNotified))
 	builder.WriteString(", ")
 	builder.WriteString("insured=")
 	builder.WriteString(fmt.Sprintf("%v", _m.Insured))
